--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@smastrom/react-rating": "^1.3.1",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
@@ -29,7 +31,8 @@
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.11"
+    "sweetalert2": "^11.7.11",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
